authelia/authelia-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-http
  namespace: authelia
spec:
  parentRefs:
    - name: authelia-http
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - auth.raft.lutris.house
  rules:
    - backendRefs:
        - name: authelia
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
