authelia/lldap-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap-http
  namespace: authelia
spec:
  parentRefs:
    - name: lldap-http
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - ldap.raft.lutris.house
  rules:
    - backendRefs:
        - name: authelia-lldap-http
          port: 17170
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
